Support installation and configuration of CDH3u0 hbase clusters